@startuml Geometric
abstract class AbstractGeometricObject {
    {abstract} getArea(): double
    {abstract} getPerimeter(): double
}
class Triangle {
    -side1: double
    -side2: double
    -side3: double
    +Triangle(side1: double, side2: double, side3: double)
    +getArea(): double
    +getPerimeter(): double
}
class Rectangular {
    -width: double
    -height: double
    +Rectangular(width: double, height: double)
    +getArea(): double
    +getPerimeter(): double
}
class Circle {
    -radius: double
    +Circle(radius: double)
    +getArea(): double
    +getPerimeter(): double
}
AbstractGeometricObject <|-- Triangle
AbstractGeometricObject <|-- Rectangular
AbstractGeometricObject <|-- Circle
@enduml